# skai_ap

./: OllamaChat  README.md
frontend/: index.html  script.js  skai_app.py  styles.css
new/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
old/: activate.sh  skai_app.py
skai_app/: main.cpp  mainwindow.cpp
skai_app/.bin/: Skai
skaifox_plugin/: sidebar.html  sidebar.js
skaifox_pugin/: manifest.json  sidebar.html  sidebar.js
skterminal/: skai_terminal
